--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.maojianwei.wechat</groupId>
     <artifactId>wechat-message-notify</artifactId>
-    <version>1.0</version>
+    <version>1.0.FIX</version>
     <packaging>jar</packaging>
 
     <name>wechat-message-notify</name>
@@ -66,7 +66,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.9.6</version>
+            <version>2.9.8</version>
         </dependency>
 
         <dependency>
