--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,7 @@
                     </execution>
                 </executions>
             </plugin>
+            <!-- comment for Travis CI, please uncomment on demand
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
@@ -132,6 +133,7 @@
                     </execution>
                 </executions>
             </plugin>
+            -->
         </plugins>
     </build>
 </project>
